장르 기타로 들어가던거 본인 장르로 들어가게 수정